--- a/3_解构.html
+++ b/3_解构.html
@@ -6,10 +6,50 @@
 </head>
 <body>
 <script>
+    // 数组解构
     let arr=[1,2,4,[1,3]];
     console.log(arr);
     let[a,b,c,[d,e]]=arr;
-    console.log(a,b,c,);
+    console.log(a,b,c,d,e);
+
+    // 对象解构
+    let {name,age}={
+        name:'lisi',
+        age:'18'
+    }
+    console.log(name,age)
+
+    // 字符串解构
+    let str='ddd';
+     let [a2,b2,c2]=str;
+    console.log(a2,b2,c2)
+
+    // 函数解构
+    function foo([a1,b1,c1]){
+        console.log(a1,b1,c1)
+    }
+    let arr1=[1,2,3];
+    foo(arr1);
+
+    function foo1({name,age1=1}){
+        console.log(name,age1);
+    }
+    let obj={
+        name:'ll',
+        age};
+    foo1(obj);
+
+    // 改变数组顺序解构
+    let [a,b]=[b,a];
+    // json解构
+    let json='{"a":"123","c":"456"}'
+    let obj1=JSON.parse(json);
+    console.log(obj1);
+
+    let s=JSON.stringify(obj1);
+    console.log(s);
+
 </script>
+
 </body>
 </html>
