--- a/3_解构.html
+++ b/3_解构.html
@@ -40,7 +40,9 @@
     foo1(obj);
 
     // 改变数组顺序解构
-    let [a,b]=[b,a];
+    let a4=1;
+    let b4=2;
+    let [a3,b3]=[b4,a4];
     // json解构
     let json='{"a":"123","c":"456"}'
     let obj1=JSON.parse(json);
