--- a/11_图片预加载.html
+++ b/11_图片预加载.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-
+    //10,11都是预处理问题,包括setinterval等
     let oImg=new Image();
     oImg.src='s.jpg';
     oImg.onload=function(){
